--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "cra",
 	"version": "0.1.0",
 	"private": true,
-	"homepage": "https://uprm-bio-optics.github.io",
+	"homepage": "https://uprm-bio-optics.github.io/data-visualization-app",
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.3.0",
