--- a/package.json
+++ b/package.json
@@ -4,10 +4,17 @@
 	"private": true,
 	"homepage": "https://uprm-bio-optics.github.io/Data-Visualization-App/",
 	"dependencies": {
+		"@emotion/react": "^11.10.4",
+		"@emotion/styled": "^11.10.4",
+		"@mui/lab": "^5.0.0-alpha.99",
+		"@mui/material": "^5.10.5",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.3.0",
 		"@testing-library/user-event": "^13.5.0",
 		"gh-pages": "^4.0.0",
+		"jquery": "^3.6.1",
+		"mqtt": "^4.3.7",
+		"plotly.js": "^2.14.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-scripts": "5.0.1",
