--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
 		"@testing-library/react": "^13.3.0",
 		"@testing-library/user-event": "^13.5.0",
 		"gh-pages": "^4.0.0",
-		"jquery": "^3.6.1",
-		"mqtt": "^4.3.7",
-		"plotly.js": "^2.14.0",
+		"precompiled-mqtt": "^4.3.14-beta",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-scripts": "5.0.1",
